# charlotteos

./: .gdbinit  .gitignore  Cargo.toml  README.md  README.zh-CN.md  debug.gdb  debug.sh  run.sh  start_qemu.sh
.cargo/: config.toml
.zed/: debug.json
src/: config.rs  entry.S  entry.S.bak  lang_items.rs  linker.ld  main.rs  system.rs
src/bsp/: mod.rs  qemu_virt.rs
src/console/: mod.rs
src/data_struct/: lock.rs  mod.rs  ring_buf.rs  sync_ref_cell.rs
src/driver/: mod.rs  plic.rs  traits.rs  uart.rs  uart_polling.rs
src/interrupts/: mod.rs
src/mm/: address.rs  buddy.rs  bump.rs  memblock.rs  mm_set.rs  mod.rs  pagetable.rs  slub.rs
src/syslib/: syscall.rs
src/task/: context.rs  mod.rs  scheduler.rs  switch.rs  tcb.rs  tcp.rs
src/trap/: mod.rs
src/trap/interrupts/: mod.rs
src/trap/interrupts/service/: mod.rs  uart_service.rs
src/userlib/: syscall.rs
