[package]
name = "charlotte_os"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "charlotte_os"
harness = false

[dependencies]
lazy_static = { version = "1", features = ["spin_no_std"] }
spin = "0.10.0"
sbi-rt = "0.0.3"
bitflags = "2.10.0"
riscv = { version = "0.16.0", features = ["s-mode"] }
fdt = "0.1.5"

[features]
default = ["uart_interrupt"]
# default = ["uart_polling"]
uart_polling = []
uart_interrupt = []

[profile.dev]
lto = true
